--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ProfileFragment"
-    android:background="#292723">
+    android:background="#292723"
+    tools:context=".fragment.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
@@ -19,15 +19,18 @@
             android:layout_height="70dp"
             android:layout_above="@id/become_seller_profile"
             android:layout_centerInParent="true"
-            android:layout_marginBottom="35dp"
+            android:layout_marginBottom="50dp"
             android:background="@drawable/user_avatar_profile" />
 
         <TextView
             android:id="@+id/username_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_below="@id/avatar"/>
+            android:layout_below="@id/avatar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="-50dp"
+            android:textColor="@color/grey_MC_100"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/become_seller_profile"
@@ -45,27 +48,28 @@
             android:textSize="18sp" />
 
         <ImageView
+            android:id="@+id/become_seller_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/become_seller_profile"
             android:layout_alignEnd="@id/become_seller_profile"
             android:layout_alignBottom="@id/become_seller_profile"
-            android:layout_marginEnd="5dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/ic_iconoir_nav_arrow_right"/>
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/ic_iconoir_nav_arrow_right" />
 
         <TextView
             android:id="@+id/sign_out_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/become_seller_profile"
             android:layout_centerInParent="true"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="70dp"
+            android:background="@drawable/profile_box_option_setting"
             android:fontFamily="@font/nunito_regular"
             android:paddingStart="15dp"
-            android:layout_below="@id/become_seller_profile"
-            android:background="@drawable/profile_box_option_setting"
             android:paddingTop="6dp"
-            android:layout_marginTop="15dp"
             android:paddingBottom="6dp"
             android:text="@string/sign_out"
             android:textColor="@color/grey_MC_100"
@@ -77,11 +81,9 @@
             android:layout_alignTop="@id/sign_out_profile"
             android:layout_alignEnd="@id/sign_out_profile"
             android:layout_alignBottom="@id/sign_out_profile"
-            android:layout_marginEnd="5dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/ic_iconoir_nav_arrow_right"/>
-
-
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/ic_iconoir_nav_arrow_right" />
 
 
     </RelativeLayout>
