--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -72,8 +72,10 @@
         android:layout_above="@+id/tabLayout"
         android:layout_alignBottom="@id/tabLayout"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
-
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="-2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="56dp" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
