--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,8 +47,37 @@
             android:textColor="@color/grey_MC_100"
             android:textSize="18sp" />
 
+
         <ImageView
             android:id="@+id/become_seller_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/become_seller_profile"
+            android:layout_alignEnd="@id/become_seller_profile"
+            android:layout_alignBottom="@id/become_seller_profile"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/ic_iconoir_nav_arrow_right" />
+
+        <TextView
+            android:visibility="invisible"
+            android:id="@+id/my_list_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="70dp"
+            android:background="@drawable/profile_box_option_setting"
+            android:fontFamily="@font/nunito_regular"
+            android:paddingStart="15dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:text="My List"
+            android:textColor="@color/grey_MC_100"
+            android:textSize="18sp" />
+
+
+        <ImageView
+            android:id="@+id/my_list_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/become_seller_profile"
