--- a/app/src/main/res/layout/item_row_shop_fragment.xml
+++ b/app/src/main/res/layout/item_row_shop_fragment.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_item_detail"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="107dp"
+    android:layout_height="120dp"
     android:background="@color/primary_MC_1">
 
     <ImageView
