--- a/app/src/main/res/layout/popup_are_you_sure_option.xml
+++ b/app/src/main/res/layout/popup_are_you_sure_option.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -12,8 +12,10 @@
         android:layout_centerInParent="true"
         android:background="@drawable/pop_up_box_are_you_sure">
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/title_pop_up"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Do you want to become a seller ?"
             android:paddingStart="5dp"
             android:paddingEnd="5dp"
