--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -48,6 +48,7 @@
                 android:padding="5dp"/>
 
             <ImageView
+                android:id="@+id/itemCart_mainScreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
